# Bridge-Backend

./: .gitignore  .pre-commit-config.yaml  Procfile  README.md  local.yml  manage.py  production.yml  pyproject.toml  pytest.ini  report.xml  requirements_from_poetry.txt  setup.cfg
.envs/.local/: .postgres
.github/workflows/: health_check.yml  staging_deploy.yml
bridge/: __init__.py  admin.py  apps.py  conftest.py  tokens.py  urls.py
bridge/api/views/: auth.py
bridge/api/views/candidate/: auth.py  onboarding.py
bridge/api/views/recruiter/: auth.py
bridge/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
bridge/migrations/: 0001_initial.py  0002_remove_user_username.py  0003_candidatevideo_company_shortlistgroup_and_more.py  0004_alter_user_role.py
bridge/models/: Candidate.py  CandidateDepartment.py  CandidateIndustry.py  CandidateProfile.py  CandidateSkill.py  CandidateSpecialization.py  CandidateVideo.py  CandidateVideoReport.py  City.py  Company.py  Country.py  RecruiterProfile.py  ShortlistGroup.py  User.py  __init__.py
bridge/tests/: factories.py  test_swagger.py
bridge/tests/models/: test_Candidate.py  test_CandidateDepartment.py  test_CandidateIndustry.py  test_CandidateProfile.py  test_CandidateSkill.py  test_CandidateSpecialization.py  test_CandidateVideo.py  test_CandidateVideoReport.py  test_City.py  test_Company.py  test_Country.py  test_RecruiterProfile.py  test_ShortlistGroup.py  test_ShortlistGroupVideo.py  test_User.py
bridge/users/: admin.py  apps.py  forms.py  urls.py
bridge/users/migrations/: 0001_initial.py  0002_remove_user_is_staff_remove_user_is_superuser.py
bridge/users/models/: Candidate.py  User.py  __init__.py
bridge/users/tests/: test_swagger.py
bridge/utils/: basemodel.py
bridge_maizzle/: config.js  config.production.js  package-lock.json  tailwind.config.js
bridge_maizzle/build_production/: confirmation_email.html  promotional.html  transactional.html
compose/local/django/: Dockerfile
compose/local/docs/: Dockerfile
compose/production/postgres/: Dockerfile
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
requirements/: base.txt  local.txt  production.txt
scripts/: prevent_branch_commit.sh
(+7 files in other folders)
