[tool.poetry]
name = "bridge"
version = "0.1.0"
description = ""
authors = ["Waseem akram <waseem07799@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

# Django
# ------------------------------------------------------------------------------
Django = "^4.0.4"
Pillow = "^9.1.0"
argon2-cffi = "^21.3.0"
django-admin-autocomplete-filter = "^0.7.1"
django-admin-interface = "^0.19.0"
django-allauth = "^0.50.0"
django-daterangefilter = "^1.0.0"
django-environ = "^0.8.1"
django-filter = "^21.1"
django-model-utils = "^4.2.0"
django-phonenumber-field = "^6.1.0"
django-ratelimit = "^3.0.1"
django-redis = "^5.2.0"
django-storages = {extras = ["boto3"], version = "^1.12.3"}
exceptionite = "^2.2.4"
gunicorn = "^20.1.0"
hiredis = "^2.0.0"
psycopg2-binary = "^2.9.3"
python-slugify = "^6.1.2"
pytz = "^2022.1"
redis = "^4.2.2"
sentry-sdk = "^1.10.0"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
whitenoise = "^6.0.0"

# Django Rest Framework
# ------------------------------------------------------------------------------
djangorestframework = "^3.13.1"
django-cors-headers = "^3.11.0"
drf-yasg = "^1.20.0"
drf-writable-nested = "^0.6.3"
drf-spectacular = "^0.22.1"
django-anymail = {extras = ["sendgrid"], version = "^8.5"}
djoser = "^2.1.0"

# Others
# ------------------------------------------------------------------------------


[tool.poetry.dev-dependencies]
awsebcli = "^3.20.3"
jupyter = "^1.0.0"
locust = "^2.8.6"
factory-boy = "^3.2.1"
django-debug-toolbar = "^3.4.0"
django-extensions = "^3.1.5"
django-coverage-plugin = "^2.0.3"
ipdb = "^0.13.9"

# Documentation
# ------------------------------------------------------------------------------
Sphinx = "^4.5.0"
sphinx-autobuild = "^2021.3.14"

# Testing
# ------------------------------------------------------------------------------
pytest-django = "^4.5.2"
pytest-cov = "^3.0.0"
mixer = "^7.2.2"
pytest-mock = "^3.7.0"
django-stubs = "^1.10.1"
pytest-sugar = "^0.9.4"
djangorestframework-stubs = "^1.5.0"

# Code quality
# ------------------------------------------------------------------------------
flake8 = "^4.0.1"
flake8-isort = "^4.1.1"
coverage = "^6.3.2"
black = "^22.3.0"
pylint-django = "^2.5.3"
pre-commit = "^2.18.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
